--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.1.0",
+    "dotenv": "^16.4.4",
     "html-react-parser": "^5.1.5",
     "next": "14.1.0",
     "react": "^18",
