--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -18,6 +18,8 @@ permissions:
   pages: write
   id-token: write
 
+
+
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
@@ -28,6 +30,11 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    environment: github-pages 
+    env:
+      EMAILJS_SERVICEID: ${{ secrets.EMAILJS_SERVICEID }}
+      EMAILJS_KEY: ${{ secrets.EMAILJS_KEY }}
+      EMAILJS_TEMPLATEID: ${{ vars.EMAILJS_TEMPLATEID }} 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -61,6 +68,10 @@ jobs:
           #
           # You may remove this line if you want to manage the configuration yourself.
           #static_site_generator: next
+      - name: Check variables
+        run: |
+          echo "EMAILJS_SERVICEID variable : ${{ env.EMAILJS_SERVICEID }}"
+          echo "EMAILJS_TEMPLATEID variable : $EMAILJS_TEMPLATEID"
       - name: Restore cache
         uses: actions/cache@v4
         with:
@@ -74,11 +85,11 @@ jobs:
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} next build
+        run:  ${{ steps.detect-package-manager.outputs.runner }} next build
         env:
-          EMAILJS_SERVICEID: ${{secrets.EMAILJS_SERVICEID}}
-          EMAILJS_KEY: ${{secrets.EMAILJS_KEY}}
-          EMAILJS_TEMPLATEID: ${{vars.EMAILJS_TEMPLATEID}}
+          EMAILJS_SERVICEID: ${{ secrets.EMAILJS_SERVICEID }}
+          EMAILJS_KEY: ${{ secrets.EMAILJS_KEY }}
+          EMAILJS_TEMPLATEID: ${{ vars.EMAILJS_TEMPLATEID }} 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
@@ -89,6 +100,10 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+    env:
+      EMAILJS_SERVICEID: ${{ secrets.EMAILJS_SERVICEID }}
+      EMAILJS_KEY: ${{ secrets.EMAILJS_KEY }}
+      EMAILJS_TEMPLATEID: ${{ vars.EMAILJS_TEMPLATEID }} 
     runs-on: ubuntu-latest
     needs: build
     steps:
