--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -36,6 +36,8 @@ jobs:
       EMAILJS_KEY: ${{ secrets.EMAILJS_KEY }}
       EMAILJS_TEMPLATEID: ${{ vars.EMAILJS_TEMPLATEID }}
       EMAILJS_RECAPTCHA: ${{ secrets.EMAILJS_RECAPTCHA }}
+      GOOGLE_MAPS_API_KEY: ${{ secrets.GOOGLE_MAPS_API_KEY }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -88,6 +90,7 @@ jobs:
           EMAILJS_KEY: ${{ secrets.EMAILJS_KEY }}
           EMAILJS_TEMPLATEID: ${{ vars.EMAILJS_TEMPLATEID }} 
           EMAILJS_RECAPTCHA: ${{ secrets.EMAILJS_RECAPTCHA }}
+          GOOGLE_MAPS_API_KEY: ${{ secrets.GOOGLE_MAPS_API_KEY }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
@@ -103,6 +106,7 @@ jobs:
       EMAILJS_KEY: ${{ secrets.EMAILJS_KEY }}
       EMAILJS_TEMPLATEID: ${{ vars.EMAILJS_TEMPLATEID }} 
       EMAILJS_RECAPTCHA: ${{ secrets.EMAILJS_RECAPTCHA }}
+      GOOGLE_MAPS_API_KEY: ${{ secrets.GOOGLE_MAPS_API_KEY }}
     runs-on: ubuntu-latest
     needs: build
     steps:
