--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
+    "@types/google-map-react": "^2.1.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -29,6 +30,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "gh-pages": "^6.1.1",
+    "google-map-react": "^2.2.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
