--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -37,7 +37,7 @@ jobs:
       EMAILJS_TEMPLATEID: ${{ vars.EMAILJS_TEMPLATEID }}
       EMAILJS_RECAPTCHA: ${{ secrets.EMAILJS_RECAPTCHA }}
       GOOGLE_MAPS_API_KEY: ${{ secrets.GOOGLE_MAPS_API_KEY }}
-
+      MAPBOX_KEY: ${{ secrets.MAPBOX_KEY }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -91,6 +91,7 @@ jobs:
           EMAILJS_TEMPLATEID: ${{ vars.EMAILJS_TEMPLATEID }} 
           EMAILJS_RECAPTCHA: ${{ secrets.EMAILJS_RECAPTCHA }}
           GOOGLE_MAPS_API_KEY: ${{ secrets.GOOGLE_MAPS_API_KEY }}
+          MAPBOX_KEY: ${{ secrets.MAPBOX_KEY }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
@@ -107,6 +108,7 @@ jobs:
       EMAILJS_TEMPLATEID: ${{ vars.EMAILJS_TEMPLATEID }} 
       EMAILJS_RECAPTCHA: ${{ secrets.EMAILJS_RECAPTCHA }}
       GOOGLE_MAPS_API_KEY: ${{ secrets.GOOGLE_MAPS_API_KEY }}
+      MAPBOX_KEY: ${{ secrets.MAPBOX_KEY }}
     runs-on: ubuntu-latest
     needs: build
     steps:
