--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.1.0",
     "dotenv": "^16.4.4",
     "html-react-parser": "^5.1.5",
+    "mapbox-gl": "^3.1.2",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@types/google-map-react": "^2.1.10",
+    "@types/mapbox-gl": "^3.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
