--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-config-next": "14.1.0",
     "gh-pages": "^6.1.1",
     "google-map-react": "^2.2.1",
+    "next-plausible": "^3.12.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
